[package]
name = "character_controller"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.2.1"
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
leafwing-input-manager = "0.16.0"
