[package]
name = "character_controller"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian" }
bevy = { version = "0.16", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.31"
bevy_enhanced_input = "0.11.0"
